--- a/project1.css
+++ b/project1.css
@@ -66,7 +66,7 @@ p{
     margin-right:780px ;
     width:35%;
     align-items: center;
-    padding-left: 2%; */
+    padding-left: 2%; 
 }
 .hi{
     font-size: 35px;
